@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-26T16:26:35Z",
-  "count" : 2,
+  "timestamp" : "2022-08-09T08:24:32Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
