@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-09T01:57:15Z",
+  "timestamp" : "2022-08-09T08:24:32Z",
   "count_outdated" : 2322,
   "uniques_outdated" : 529,
-  "count" : 2354,
-  "uniques" : 547,
+  "count" : 2356,
+  "uniques" : 549,
   "clones" : [
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
