@@ -1,10 +1,10 @@
 {
-  "count": 32,
-  "uniques": 5,
+  "count": 34,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-08-08T00:00:00Z",
+      "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
       "count": 3,
       "uniques": 2
     }
